Add new path to router
