# mainServer/docs/swagger.yaml
@@ -327,7 +327,7 @@ paths:
           schema:
             $ref: '#/definitions/httperror.HTTPError'
       summary: Creates thread entity
-  /articles/:articleID/versions/:versionID/history/:commitID/threads:
+  /articles/:articleID/versions/:versionID/history/:commitID/sectionThreads:
     get:
       description: Gets a list with all threads belonging to a specific commit of
         an article
@@ -356,6 +356,35 @@ paths:
           schema:
             $ref: '#/definitions/httperror.HTTPError'
       summary: Get all section threads for a commit
+  /articles/:articleID/versions/:versionID/history/:commitID/threads:
+    get:
+      description: Gets a list with all threads belonging to a specific commit of
+        an article
+      parameters:
+      - description: Article ID
+        in: path
+        name: ID
+        required: true
+        type: integer
+      - description: Commit ID
+        in: path
+        name: ID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Thread'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperror.HTTPError'
+      summary: Get all threads for a commit
   /articles/{articleID}/requests:
     get:
       description: Gets a list of merge requests (with possible filtering conditions)
