# mainServer/server/router.go
@@ -45,6 +45,8 @@ func SetUpRouter(cfg *config.Config, contrs ControllerEnv) *gin.Engine {
 
 	router.GET("/articles/:articleID/versions/:versionID/history/:commitID/threads",
 		contrs.thread.GetCommitThreads)
+	router.GET("/articles/:articleID/versions/:versionID/history/:commitID/sectionThreads",
+		contrs.thread.GetCommitSectionThreads)
 	router.GET("/articles/:articleID/requests/:requestID/threads", contrs.thread.GetRequestThreads)
 	router.POST("/articles/:articleID/thread/:threadType/id/:specificID", contrs.thread.CreateThread)
 	router.POST("/comments/thread/:threadID", contrs.thread.SaveComment)
